--- a/src/pages/application/index.module.css
+++ b/src/pages/application/index.module.css
@@ -70,7 +70,7 @@
       background-color: #f2f4f7;
       border-radius: 12px;
       position: relative;
-
+      overflow: hidden;
       @media (max-width: 1280px) {
         min-height: 400px;
       }
